--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link fs-5 active" href="/index.html">Home</a>
+                <a class="nav-link fs-5 active" href="/Ramzi-Portfolio/index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5 active" href="/index.html#skills"
+                <a class="nav-link fs-5 active" href="/Ramzi-Portfolio/index.html#skills"
                   >Skills</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5" href="/projects.html">Projects</a>
+                <a class="nav-link fs-5" href="/Ramzi-Portfolio/projects.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5" href="/contact.html">Contact Me</a>
+                <a class="nav-link fs-5" href="/Ramzi-Portfolio/contact.html">Contact Me</a>
               </li>
             </ul>
           </div>
