--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg fixed-top">
+            <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand logo" href="index.html#home"
             ><img src="./assets/Logo.png" alt=""
@@ -44,18 +44,18 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link fs-5 active" href="/index.html">Home</a>
+                <a class="nav-link fs-5 active" href="/Ramzi-Portfolio/index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5 active" href="/index.html#skills"
+                <a class="nav-link fs-5 active" href="/Ramzi-Portfolio/index.html#skills"
                   >Skills</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5" href="/projects.html">Projects</a>
+                <a class="nav-link fs-5" href="/Ramzi-Portfolio/projects.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5" href="/contact.html">Contact Me</a>
+                <a class="nav-link fs-5" href="/Ramzi-Portfolio/contact.html">Contact Me</a>
               </li>
             </ul>
           </div>
