--- a/projects.html
+++ b/projects.html
@@ -25,9 +25,9 @@
   </head>
   <body>
      <header>
-      <nav class="navbar navbar-expand-lg fixed-top">
+            <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand logo" href="/Ramzi-Portfolio/index.html#home"
+          <a class="navbar-brand logo" href="index.html#home"
             ><img src="./assets/Logo.png" alt=""
           /></a>
           <button
@@ -44,7 +44,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link fs-5 active" href="/Ramzi-Portfolio/index.html#home">Home</a>
+                <a class="nav-link fs-5 active" href="/Ramzi-Portfolio/index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fs-5 active" href="/Ramzi-Portfolio/index.html#skills"
@@ -62,7 +62,6 @@
         </div>
       </nav>
     </header>
-
     <section class="projects">
       <div class="projects-container">
         <div class="proj">
