--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg fixed-top">
+            <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand logo" href="/Ramzi-Portfolio/index.html#home"
+          <a class="navbar-brand logo" href="index.html#home"
             ><img src="./assets/Logo.png" alt=""
           /></a>
           <button
@@ -44,7 +44,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link fs-5 active" href="/Ramzi-Portfolio/index.html#home">Home</a>
+                <a class="nav-link fs-5 active" href="/Ramzi-Portfolio/index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fs-5 active" href="/Ramzi-Portfolio/index.html#skills"
