--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@
     <link rel="stylesheet" href="main.css" />
   </head>`
   <body>
-      <header>
-            <nav class="navbar navbar-expand-lg fixed-top">
+ <header>
+      <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand logo" href="index.html#home"
+          <a class="navbar-brand logo" href="/Ramzi-Portfolio/index.html#home"
             ><img src="./assets/Logo.png" alt=""
           /></a>
           <button
@@ -41,10 +41,10 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link fs-5 active" href="/Ramzi-Portfolio/index.html">Home</a>
+                <a class="nav-link fs-5 active" href="/Ramzi-Portfolio/index.html#home">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fs-5 active" href="/Ramzi-Portfolio/index.html#skills"
