--- a/projects.html
+++ b/projects.html
@@ -24,10 +24,10 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-     <header>
-            <nav class="navbar navbar-expand-lg fixed-top">
+    <header>
+      <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand logo" href="index.html#home"
+          <a class="navbar-brand logo" href="/Ramzi-Portfolio/index.html#home"
             ><img src="./assets/Logo.png" alt=""
           /></a>
           <button
@@ -44,18 +44,28 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link fs-5 active" href="/Ramzi-Portfolio/index.html">Home</a>
+                <a
+                  class="nav-link fs-5 active"
+                  href="/Ramzi-Portfolio/index.html#home"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5 active" href="/Ramzi-Portfolio/index.html#skills"
+                <a
+                  class="nav-link fs-5 active"
+                  href="/Ramzi-Portfolio/index.html#skills"
                   >Skills</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5" href="/Ramzi-Portfolio/projects.html">Projects</a>
+                <a class="nav-link fs-5" href="/Ramzi-Portfolio/projects.html"
+                  >Projects</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5" href="/Ramzi-Portfolio/contact.html">Contact Me</a>
+                <a class="nav-link fs-5" href="/Ramzi-Portfolio/contact.html"
+                  >Contact Me</a
+                >
               </li>
             </ul>
           </div>
